# actor-scrapy-books-example

./: Makefile  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.actor/: Dockerfile  actor.json  input_schema.json
.github/workflows/: lint_and_type_checks.yaml  run_code_checks.yaml
books_scraper/: __main__.py  items.py  main.py  pipelines.py  settings.py
books_scraper/spiders/: book.py
src/: __main__.py  pipelines.py  settings.py
src/spiders/: __init__.py  book.py
