[project]
name = "scrapy-books-example"
version = "0.1.0"
description = "Example Actor scraping books using Scrapy and Apify SDK."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify[scrapy]~=2.6.0",
    "scrapy~=2.11.0",
]

[dependency-groups]
dev = [
    "mypy~=1.16.0",
    "ruff~=0.12.0",
]

[tool.ruff]
line-length = 120
include = ["books_scraper/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]
"**/__main__.py" = [
    "E402", # Module level import not at top of file
]

[tool.mypy]
files = ["books_scraper"]

[[tool.mypy.overrides]]
module = [
    'scrapy.*',
]
ignore_missing_imports = true
