[project]
name = "scrapy-books-example"
version = "0.0.0" # not used by Apify
description = "" # not used by Apify
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify[scrapy] < 3.0.0",
    "scrapy < 3.0.0",
]

[dependency-groups]
dev = [
    "mypy~=1.16.0",
    "ruff~=0.12.0",
]

[tool.ruff]
line-length = 120
include = ["src/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Unused imports
]
"**/__main__.py" = [
    "E402", # Module level import not at top of file
]

[tool.mypy]
files = ["src"]

[[tool.mypy.overrides]]
module = [
    'scrapy.*',
]
ignore_missing_imports = true
